# solvers

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pdlp_comparison.ipynb
examples/: 01_qdldl_vs_numpy_scipy.ipynb  02_osqp_vs_scipy_unconstrained_qp.ipynb  03_piqp_vs_scipy_constrained_qp.ipynb  04_ipm_vs_highs_pulp.ipynb  05_custom_ldlt_vs_numpy_scipy.ipynb  06_bunch_kaufman_ldlt.ipynb  07_supernode_detection.ipynb  README.md  bk.py  highs_compare_ipm.py  test.py
ipm/: AMD.h  Evaluator.h  IPSolver.h  LDLT.h  README.md  diagonal_regularization.h  hipo_ldlt.h  ip_solver.h  ipm_linear_solver.h  iterative_refinement.h  normal_eq_ldlt.h  qd_ldlt.h  sparse_solver.h
linear_system/: amd.h  ldlt.h  ldlt_simd.h  qdldl.h  qdldl_simd.h  schur_frontal_ldlt.h  schur_frontal_ldlt_standalone.h  supernodal_eigen_interop.h  supernodal_ldlt.h  supernodes.h
linear_system/common/: amd.h  dense_matrix.h  ordering.h  sparse_csc.h  trisolve.h
linear_system/eigen_addon/: ldlt_eigen_interop.h  schur_frontal_eigen_interop.h
linear_system/eigen_interop/: ldlt_bk_eigen_interop.h  ldlt_eigen_interop.h  schur_frontal_eigen_interop.h  supernodal_eigen_interop.h
linear_system/klu/: klu.h  klu_impl.cpp
linear_system/ldlt/: ldlt.h  ldlt_bk.h  ldlt_bk_eigen_interop.h  ldlt_eigen_interop.h  ldlt_highway_backend.h  ldlt_simd.h  schur_frontal_ldlt.h  supernodal_ldlt.h
linear_system/qdldl/: qdldl.h  qdldl_simd.h
linear_system/schur/: schur_frontal_eigen_interop.h
pdlp/: pdlp.h  pdlp_cuda.h
python/: CMakeLists.txt  README.md  bindings_utils.h  ipm_module.cpp  ipm_qd_ext.cpp  klu_ext.cpp  ldlt_bk_ext.cpp  ldlt_ext.cpp  osqp_ext.cpp  pdlp_ext.cpp  piqp_ext.cpp  qdldl_ext.cpp
python/solvers/: __init__.py  supernodal_ext.cpp  supernodes_ext.cpp
python/test_solvers/: conftest.py  test_ipm_qd.py  test_klu.py  test_ldlt.py  test_ldlt_bk.py  test_matrix_generators.py  test_osqp.py  test_pdlp.py  test_piqp.py  test_qdldl.py  test_solvers_comparison.py  test_supernodal.py
qp/: osqp.h  piqp.h  ruiz.h
src/ipm/: IPSolver.cpp  ip_solver.cpp  ipm_linear_solver.cpp
src/pdlp/: pdlp_cuda.cu
tests/: debug_ldlt.cpp  test_amd_debug.cpp  test_csc_debug.cpp  test_hipo_ldlt.cpp  test_ldlt.cpp  test_ldlt_2x2.cpp  test_supernodes.cpp
